# aimo-app-amico

./: .gitignore  Cargo.toml  LEXICAL_SCHEMA_TS.md  README.md  publish.sh
assets/: example_note.json
example/: package.json  pnpm-lock.yaml
example/src/: App.jsx  login.jsx
example/src/hooks/: useAgent.js  useAmico.js
pkg/: .gitignore  README.md  WASM_INTEGRATION.md  package-lock.json  package.json  rollup.config.js  tsconfig.json
pkg/src/: index.ts  types.ts
pkg/src/context/: AgentContext.tsx
pkg/src/hooks/: index.ts
pkg/src/utils/: index.ts
src/: agent.rs  lib.rs  log.rs  note.rs  service.rs
