[package]
name = "aimo-note-agent"
version = "0.1.5"
edition = "2024"
description = "AIMO note app agent built with Amico"
license = "MIT"
repository = "https://github.com/AIMOverse/note-agent"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
wasm = [
    "console_error_panic_hook",
    "amico-core/wasm",
    "wasm-bindgen-futures",
    "getrandom",
    "tokio_with_wasm",
    "tracing-subscriber-wasm",
    "chrono/wasm-bindgen",
    "serde-wasm-bindgen",
]

[dependencies]
wasm-bindgen = "0.2.100"
amico-core = { version = "1.2.0" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-futures = { version = "0.4.50", optional = true }
#js-sys = "0.3.77"
getrandom = { version = "0.3", features = ["wasm_js"], optional = true}
#solana-sdk = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.45.1", features = ["time", "macros", "rt"] }
anyhow = { version = "1.0.98" }
evenio = { version = "0.6.0" }
tracing = { version = "0.1.41" }
tracing-subscriber = "0.3.19"
tracing-subscriber-wasm = { version = "0.1.0", optional = true }
tokio_with_wasm = { version = "0.8.6", features = ["rt", "macros", "time"], optional = true }
async-trait = { version = "0.1.88" }
reqwest = { version = "0.12.20", features = [
    "rustls-tls",
    "json",
], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
serde-wasm-bindgen = { version = "0.6.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
# Keep debug info for better logs in release mode
debug = true
